<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loops"
        android:textSize="20sp"
        android:textColor="#000000"
        android:gravity="center_horizontal" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView4" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loop_while"
                android:id="@+id/textView2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:id="@+id/imageView"
                android:src="@drawable/while_img"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loop_for"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/img_for"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>